refactor: improve email handling and password reset
- Refactor email sending to use a centralized send-email module - Add used flag to password reset tokens for better security - Improve e2e test stability for password reset flow - Fix local inbox email content visibility check - Update booking cancellation email handling - Improve certificate handling in e2e tests

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -83,7 +83,7 @@ jobs:
         id: snapshot-diff
         with:
           script: |
-            const { findMissingFiles } = await import('./.github/scripts/find-missing-snapshots.mjs');
+            const { findMissingFiles } = await import('${{ github.workspace }}/.github/scripts/find-missing-snapshots.mjs');
             await findMissingFiles();
 
       - name: Test Storybook
@@ -108,7 +108,7 @@ jobs:
         with:
           script: |
             try {
-              const { validateSnapshotChanges } = await import('./.github/scripts/validate-snapshot-changes.mjs');
+              const { validateSnapshotChanges } = await import('${{ github.workspace }}/.github/scripts/validate-snapshot-changes.mjs');
               await validateSnapshotChanges();
             } catch (error) {
               core.setFailed(`Failed to validate snapshot changes: ${error.message}`);
