--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "1.1.1",
   "dependencies": {
+    "@actions/core": "^1.11.1",
     "@adobe/react-spectrum": "^3.38.1",
     "@aws-sdk/client-cloudformation": "3.721.0",
     "@aws-sdk/client-iam": "3.721.0",
