--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,29 +17,74 @@ permissions:
 jobs:
   validate:
     if: github.event_name != 'deployment_status'
-    name: ${{ matrix.task.name }}
-    runs-on: macos-14
+    name: Validate
+    runs-on: ubuntu-latest
     timeout-minutes: 10
-    strategy:
-      fail-fast: true
-      matrix:
-        task:
-          - name: Lint
-            run: pnpm run lint:strict
-          - name: Type check
-            run: pnpm run typecheck
-          - name: Format check
-            run: pnpm run format:check
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
-      - name: ${{ matrix.task.name }}
-        run: ${{ matrix.task.run }}
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pnpm-store
+            node_modules
+            .next/cache
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
+
+      - name: Lint
+        id: lint
+        continue-on-error: true
+        run: |
+          if pnpm run lint:strict; then
+            echo "::set-output name=status::success"
+            echo "### Lint: passed" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "::set-output name=status::failure"
+            echo "### Lint: failed" >> $GITHUB_STEP_SUMMARY
+            exit 1
+          fi
+
+      - name: Type check
+        id: typecheck
+        continue-on-error: true
+        run: |
+          if pnpm run typecheck; then
+            echo "::set-output name=status::success"
+            echo "### Type check: passed" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "::set-output name=status::failure"
+            echo "### Type check: failed" >> $GITHUB_STEP_SUMMARY
+            exit 1
+          fi
+
+      - name: Format check
+        id: format
+        continue-on-error: true
+        run: |
+          if pnpm run format:check; then
+            echo "::set-output name=status::success"
+            echo "### Format check: passed" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "::set-output name=status::failure"
+            echo "### Format check: failed" >> $GITHUB_STEP_SUMMARY
+            exit 1
+          fi
+
+      - name: Check all results
+        if: always()
+        run: |
+          if [[ "${{ steps.lint.outputs.status }}" == "failure" ]] || \
+             [[ "${{ steps.typecheck.outputs.status }}" == "failure" ]] || \
+             [[ "${{ steps.format.outputs.status }}" == "failure" ]]; then
+            exit 1
+          fi
 
   test:
     if: github.event_name != 'deployment_status'
     name: Run Vitest
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     needs: [validate]
     timeout-minutes: 10
     services:
@@ -59,6 +104,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pnpm-store
+            node_modules
+            .next/cache
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
       - run: touch .env.local
       - uses: docker/setup-buildx-action@v3
       - run: pnpm run test
@@ -69,7 +123,7 @@ jobs:
   fix-and-commit:
     name: Fix and commit code style
     needs: [validate]
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && needs.validate.result == 'failure'
     steps:
       - uses: actions/checkout@v4
@@ -78,6 +132,15 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
       - uses: ./.github/actions/setup
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pnpm-store
+            node_modules
+            .next/cache
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
       - name: Configure Git
         run: |
           git config --global user.name 'github-actions[bot]'
