ci: use playwright docker image for consistent visual testing - Switch from ubuntu-24.04 to mcr.microsoft.com/playwright:v1.42.1-jammy - Add pnpm installation steps to match Dockerfile.playwright setup - Ensure consistent environment between CI and local development

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -14,9 +14,15 @@ jobs:
   e2e:
     name: Playwright
     runs-on: ubuntu-24.04
+    container:
+      image: mcr.microsoft.com/playwright:v1.42.1-jammy
     if: (github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success')
     steps:
       - uses: actions/checkout@v4
+      - name: Install pnpm
+        run: |
+          corepack enable
+          corepack prepare pnpm@latest --activate
       - uses: ./.github/actions/setup
       - uses: ./.github/actions/playwright
 
@@ -52,9 +58,15 @@ jobs:
   storybook:
     name: Storybook
     runs-on: ubuntu-24.04
+    container:
+      image: mcr.microsoft.com/playwright:v1.42.1-jammy
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
+      - name: Install pnpm
+        run: |
+          corepack enable
+          corepack prepare pnpm@latest --activate
       - uses: ./.github/actions/setup
       - uses: ./.github/actions/playwright
 
