--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@storybook/addon-themes": "^8.4.7",
     "@types/lodash": "^4.17.13",
     "@types/node-forge": "^1.3.11",
+    "@types/seedrandom": "^3.0.8",
     "@types/semver": "^7.5.8",
     "@types/yargs": "^17.0.33",
     "@vercel/analytics": "^1.4.1",
@@ -77,6 +78,7 @@
     "react-stately": "^3.34.0",
     "redis": "^4.7.0",
     "resend": "^4.0.1",
+    "seedrandom": "^3.0.5",
     "slugify": "^1.6.6",
     "strip-ansi": "^7.1.0",
     "sudo-prompt": "^9.2.1",
