--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@react-email/tailwind": "^1.0.4",
     "@react-google-maps/api": "^2.20.5",
     "@storybook/addon-themes": "^8.4.7",
+    "@types/aws-sdk": "^2.7.4",
     "@types/lodash": "^4.17.13",
     "@types/node-forge": "^1.3.11",
     "@types/seedrandom": "^3.0.8",
@@ -50,6 +51,7 @@
     "@vercel/speed-insights": "^1.1.0",
     "aws-cdk": "2.174.0",
     "aws-cdk-lib": "2.174.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0",
@@ -188,7 +190,7 @@
   "scripts": {
     "build": "prisma generate --schema=src/prisma/schema.prisma --no-hints && NEXT_CONFIG_FILE=config/next.config.ts next build",
     "cdk:deploy": "cdk deploy",
-    "cdk:deploy:resources": "cdk deploy --all",
+    "cdk:deploy:resources": "pnpm cdk:validate-deployer && cdk deploy --all",
     "cdk:deployer:create": "tsx src/aws-setup/scripts/create-deployer.ts",
     "cdk:destroy": "cdk destroy --all",
     "cdk:diff": "cdk diff",
