--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@adobe/react-spectrum": "^3.38.1",
-    "@aws-sdk/client-cloudformation": "3.721.0",
-    "@aws-sdk/client-iam": "3.721.0",
-    "@aws-sdk/client-memorydb": "3.721.0",
-    "@aws-sdk/client-rds": "3.721.0",
-    "@aws-sdk/client-s3": "^3.717.0",
-    "@aws-sdk/client-secrets-manager": "3.721.0",
-    "@aws-sdk/client-sts": "3.716.0",
-    "@aws-sdk/s3-request-presigner": "^3.717.0",
+    "@aws-sdk/client-cloudformation": "^3.721.0",
+    "@aws-sdk/client-iam": "^3.721.0",
+    "@aws-sdk/client-memorydb": "^3.721.0",
+    "@aws-sdk/client-rds": "^3.721.0",
+    "@aws-sdk/client-s3": "^3.721.0",
+    "@aws-sdk/client-secrets-manager": "^3.721.0",
+    "@aws-sdk/client-ssm": "^3.721.0",
+    "@aws-sdk/client-sts": "^3.721.0",
+    "@aws-sdk/s3-request-presigner": "^3.721.0",
+    "@aws-sdk/client-lambda": "^3.721.0",
+    "@aws-sdk/client-ec2": "^3.721.0",
+    "@aws-sdk/client-elasticache": "^3.721.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -41,7 +45,6 @@
     "@react-email/tailwind": "^1.0.4",
     "@react-google-maps/api": "^2.20.5",
     "@storybook/addon-themes": "^8.4.7",
-    "@types/aws-sdk": "^2.7.4",
     "@types/lodash": "^4.17.13",
     "@types/node-forge": "^1.3.11",
     "@types/seedrandom": "^3.0.8",
@@ -51,7 +54,6 @@
     "@vercel/speed-insights": "^1.1.0",
     "aws-cdk": "2.174.0",
     "aws-cdk-lib": "2.174.0",
-    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0",
