refactor(ci): migrate GitHub workflows to Task
- Replace pnpm commands with Task commands in CI workflow

- Update E2E test workflow to use Task

- Convert package update workflow to use Task

- Ensure consistent Task usage across all workflows

--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -63,7 +63,7 @@ jobs:
           echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
 
       - name: Run update script
-        run: pnpm tsx src/scripts/update-packages.ts --limit ${{ github.event.inputs.package-limit }}
+        run: task update-packages --limit ${{ github.event.inputs.package-limit }}
 
       - name: Check for changes
         id: git-check
