--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,11 +27,11 @@ jobs:
         run: |
           # Run all checks in parallel and capture their exit codes
           echo "Running lint..."
-          pnpm run lint:strict > lint.log 2>&1 & lint_pid=$!
+          task lint:strict > lint.log 2>&1 & lint_pid=$!
           echo "Running typecheck..."
-          pnpm run typecheck > typecheck.log 2>&1 & typecheck_pid=$!
+          task typecheck > typecheck.log 2>&1 & typecheck_pid=$!
           echo "Running format check..."
-          pnpm run format:check > format.log 2>&1 & format_pid=$!
+          task format:check > format.log 2>&1 & format_pid=$!
 
           # Wait for all processes and capture their exit codes
           wait $lint_pid && lint_status=$? || lint_status=$?
@@ -80,7 +80,7 @@ jobs:
       - uses: ./.github/actions/setup
       - run: touch .env.local
       - uses: docker/setup-buildx-action@v3
-      - run: pnpm run test
+      - run: task test:unit
         env:
           DATABASE_URL: 'postgresql://postgres:postgres@localhost:5432/apadana_test_ci'
           TEST_ENV: 'unit'
@@ -102,7 +102,7 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git checkout ${{ github.head_ref }}
-      - run: pnpm run fix
+      - run: task fix:all
       - name: Check for changes
         id: git-check
         run: |
