--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -30,9 +30,9 @@ jobs:
         id: test-run
         run: |
           if [ "$ENVIRONMENT" = "production" ]; then
-            pnpm run test:e2e:prod
+            task test:e2e:prod
           else
-            pnpm run test:e2e:ci
+            task test:e2e:ci
           fi
         env:
           ENVIRONMENT: ${{ github.event.deployment_status.environment }}
@@ -72,7 +72,7 @@ jobs:
 
       - name: Test Storybook
         id: test-run
-        run: pnpm run test:storybook
+        run: task test:storybook
         env:
           VERCEL_AUTOMATION_BYPASS_SECRET: ${{ secrets.VERCEL_AUTOMATION_BYPASS_SECRET }}
           E2E_TESTING_SECRET: ${{ secrets.E2E_TESTING_SECRET }}
