--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -17,10 +17,16 @@ runs:
         node-version: 20
         cache: 'pnpm'
 
+    - name: Install Task
+      run: |
+        sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b ~/.local/bin
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
+      shell: bash
+
     - name: Install dependencies
       run: pnpm install --frozen-lockfile --silent --ignore-scripts
       shell: bash
 
     - name: Generate Prisma client
-      run: pnpm prisma generate --schema=src/prisma/schema.prisma
+      run: task prisma:generate
       shell: bash
