--- a/src/docker/Dockerfile.prod
+++ b/src/docker/Dockerfile.prod
@@ -19,6 +19,9 @@ RUN pnpm config set store-dir /home/node/.pnpm-store \
 # Install Task
 RUN sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin
 
+# Copy task configuration first
+COPY Taskfile.yml ./
+
 # Install dependencies with cache
 COPY pnpm-lock.yaml ./
 RUN --mount=type=cache,target=/home/node/.pnpm-store \
