--- a/src/docker/Dockerfile.prod
+++ b/src/docker/Dockerfile.prod
@@ -21,6 +21,7 @@ RUN sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /usr/loc
 
 # Copy task configuration first
 COPY Taskfile.yml ./
+COPY src/scripts/install-task.sh src/scripts/install-task.sh
 
 # Install dependencies with cache
 COPY pnpm-lock.yaml ./
