fix(docker): update dev command to use Task
- Replace pnpm dev with task dev:next

- Ensure consistent Task usage in Docker environment

--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -76,7 +76,7 @@ services:
         condition: service_healthy
     command: >
       sh -c "
-        pnpm dev
+        task dev:next
       "
     networks:
       - apadana_network
