--- a/package.json
+++ b/package.json
@@ -139,7 +139,6 @@
     "next-router-mock": "^0.9.13",
     "next-sitemap": "^4.2.3",
     "node-forge": "^1.3.1",
-    "nodemon": "^3.1.9",
     "openai-gpt-token-counter": "^1.1.1",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
@@ -150,6 +149,7 @@
     "testcontainers": "^10.16.0",
     "tsx": "^4.19.2",
     "typescript": "~5.7.2",
+    "vercel": "^39.2.6",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.1.8"
   },
