refactor(docker): remove redundant Task installation in Dockerfile.prod
Task is already installed via curl earlier in the Dockerfile, no need for additional installation steps

--- a/src/docker/Dockerfile.dev
+++ b/src/docker/Dockerfile.dev
@@ -19,8 +19,6 @@ RUN sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /usr/loc
 
 # Copy task configuration first
 COPY Taskfile.yml ./
-COPY src/scripts/install-task.sh src/scripts/install-task.sh
-RUN chmod +x src/scripts/install-task.sh && ./src/scripts/install-task.sh
 
 # Fetch dependencies first
 COPY pnpm-lock.yaml ./
@@ -39,6 +37,9 @@ EXPOSE 3000 6006 5555
 
 # Copy source code
 COPY . .
+
+# Run task installation
+RUN chmod +x src/scripts/install-task.sh && ./src/scripts/install-task.sh
 
 # Setup entrypoint
 COPY src/docker/docker-entrypoint.dev.sh /usr/local/bin/
